--- a/index.html
+++ b/index.html
@@ -30,17 +30,6 @@
   <!-- Navbar-->
   <nav class="navbar navbar-expand-lg fixed-top bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html"><img src="https://consent.trustarc.com/v2/asset/16:49:57.509iyipn2_Slogonoback.png" class="img-fluid" alt="logo.png" width="80" height="24"></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse justify-content-end navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-link active" aria-current="page" href="index.html">HOME</a>
-          <a class="nav-link" href="#">CONTACT</a>
-          <a class="nav-link" href="signin.html">SIGN IN</a>
-          <i class="fa" style="font-size:24px">&#xf07a;</i><span id="cart-count" class="badge text-bg-light"></span>
-        </div>
       <nav class="navbar-brand" href="/index.html"><img src="
         https://consent.trustarc.com/v2/asset/16:49:57.509iyipn2_Slogonoback.png" class="img-fluid alt=" logo.png"
           width="80" height="24"></nav>
@@ -63,14 +52,13 @@
             <a class="nav-link" href="/template/about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link">Sign in</a>
+            <a class="nav-link" href="/template/signin.html">Sign in</a>
           </li>
         </ul>
         <form class="d-flex">
           <i class="fa" data-bs-toggle="modal" data-bs-target="#exampleModal" style="font-size: 24px">&#xf07a;</i><span
             id="cart-count" class="badge text-bg-warning"></span>
         </form>
-
       </div>
     </div>
   </nav>
@@ -158,20 +146,20 @@
         <p>GET IN TOUCH WITH US AND WE CAN HELP YOU</p>
         <h2>Come to us or ask a question right now</h2>
         <div class="mb-3 w-25">
-          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Your Name" required>
+          <input type="email" class="form-control" id="txtFirstName" placeholder="Name" required>
         </div>
         <div class="mb-3 w-25">
-          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Your LastName" required>
+          <input type="email" class="form-control" id="txtLastName" placeholder="LastName" required>
         </div>
         <div class="mb-3 w-25">
-          <input type="tel" class="form-control" id="exampleFormControlInput1" placeholder="Phone" required>
+          <input type="tel" class="form-control" id="txtPhone" placeholder="Phone" required>
         </div>
         <div class="mb-3 w-25">
-          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Email" required>
+          <input type="email" class="form-control" id="txtEmail" placeholder="Email" required>
         </div>
         <div class="mb-3 w-25">
-          <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Message" rows="3"></textarea>
-          <button class="btn rounded-pill btn-warning float-end mt-3">Submit</button>
+          <textarea class="form-control" id="txtMessage" placeholder="Message" rows="3"></textarea>
+          <button class="btn rounded-pill btn-warning float-end mt-3" id="btnsubmitContact">Submit</button>
         </div>
         <iframe class="gmap"
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3861.80254902792!2d121.04663401462257!3d14.553281089832637!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397c8efd99aad53%3A0xb64b39847a866fde!2skodego!5e0!3m2!1sen!2sph!4v1671691698160!5m2!1sen!2sph"
@@ -180,22 +168,25 @@
       </div>
     </div>
   </div>
-  <footer id="shazada-footer">
-    <div class="mt-2 ms-5 container">
+  <footer class="ms-3">
+    <div class="mt-2">
       <span style="font-size: 1.5rem;font-weight: bold;">Shazada</span>
       <p>Phone: 02-8123-4567</p>
       <p>Email: group4@gmail.com</p>
       <p>Address: kodego
         18th floor, The W Fifth Avenue, 5th Ave, Taguig, 1630 Metro Manila</p>
       <div class="row-cols-auto d-flex">
-        <div class="col-sm-3">
-          <input type="email" class="form-control" class="footer-form-control" placeholder="Enter Your Email">
+        <div class="mb-3 w-25">
+          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Email" required>
           <button href="" class="btn rounded-pill btn-white mt-3 text-bg-warning" type="submit"
             role="button">Subscribe</button>
         </div>
       </div>
     </div>
   </footer>
+  <div class="footer bg-light p-2 text-center fw-bold pt-4">
+    <p>© 2023 Copyright: shazada.com</p>
+  </div>
   <!--Local fetching API-->
   <script>
     getJSONDataForContainer("/data/index.json");
@@ -204,11 +195,8 @@
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
     integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
     crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
-    integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
+    integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
     crossorigin="anonymous"></script>
   <!--Script for Active Links-->
   <script>
@@ -219,6 +207,63 @@
       }
     });
   </script>
+  <script type="module">
+
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.15.0/firebase-app.js";
+    import { getDatabase, ref, set, push, onValue } from "https://www.gstatic.com/firebasejs/9.15.0/firebase-database.js";
+
+    const firebaseConfig = {
+        apiKey: "AIzaSyD-0VAnfTH3nMxfQQd5jqNuSnZexDy71tk",
+        authDomain: "shazada-8390a.firebaseapp.com",
+        databaseURL: "https://shazada-8390a-default-rtdb.asia-southeast1.firebasedatabase.app",
+        projectId: "shazada-8390a",
+        storageBucket: "shazada-8390a.appspot.com",
+        messagingSenderId: "78486050481",
+        appId: "1:78486050481:web:b981e064b469ec91a53490"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const db = getDatabase();
+
+    const userContact = ref(db, "contactus")
+
+    const strFirstName = document.getElementById("txtFirstName");
+    const strLastName = document.getElementById("txtLastName");
+    const strPhone = document.getElementById("txtPhone");
+    const strEmail = document.getElementById("txtEmail");
+    const strMessage = document.getElementById("txtMessage");
+    const submitContact = document.getElementById("btnsubmitContact");
+
+    submitContact.addEventListener("click", contactUs);
+
+    function contactUs() {
+        if (txtFirstName.value == "" || txtLastName.value == "" || txtPhone.value == "" || txtEmail.value == "" || txtMessage.value == "") {
+            alert("Fields must not be empty!")
+        } else {
+            if (isNaN(txtPhone.value) == true) {
+                alert("Please enter a valid phone number.")
+            } else {
+
+                const contactuser = {
+                    firstname: strFirstName.value,
+                    lastname: strLastName.value,
+                    phone: strPhone.value,
+                    emailadd: strEmail.value,
+                    message: strMessage.value
+                };
+
+                set(userContact, contactuser);
+                strFirstName.value = "";
+                strLastName.value = "";
+                strPhone.value = "";
+                strEmail.value = "";
+                strMessage.value = "";
+                console.log(contactuser);
+                alert("Thank you for contacting us! Please expect an email from us regarding your concern.")
+            }
+        }
+    }
+</script>
 </body>
 
 </html>
