--- a/cart.html
+++ b/cart.html
@@ -48,7 +48,7 @@
             <a class="nav-link" href="/template/about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/template/signin.html">Sign in</a>
+            <a class="nav-link" href="/template/signin.html" id="lnkSignIn">Sign in</a>
           </li>
         </ul>
         <div class="cart">
