--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Shazada</title>
+  <title>Shazada Philippines</title>
   <!--META TAGS-->
   <meta charset="UTF-8">
   <meta name="description" content="online shoes shopping cart">
@@ -23,6 +23,8 @@
   <!--External CSS-->
   <link rel="stylesheet" href="/assets/css/product.css" />
   <link rel="stylesheet" href="/assets/css/main.css" />
+  <!--External Javascript-->
+  <script type="text/javascript" src="/app/js/function.js"></script>
 </head>
 
 <body>
@@ -45,7 +47,7 @@
             <a class="nav-link" href="/template/about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/template/signin.html">Sign in</a>
+            <a class="nav-link" href="/template/signin.html" id="lnkSignIn">Sign in</a>
           </li>
         </ul>
         <a href="/cart.html">
@@ -57,34 +59,7 @@
       </div>
     </div>
   </nav>
-  <!DOCTYPE html>
-  <html>
 
-  <head>
-    <title>Shazada Philippines</title>
-    <!--META TAGS-->
-    <meta charset="UTF-8">
-    <meta name="description" content="online shoes shopping cart">
-    <meta name="keywords" content="men and women">
-    <meta name="author" content="group4">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--Hypertext reference for the icon of Title Bar-->
-    <link rel="icon" href="/assets/images/icon/logo.ico" type="image/icon type" />
-    <!--Bootstrap CSS CDN-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <!--Font Awesome CDN-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
-    <!--Google Font CDN-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Slabo+27px&display=swap" rel="stylesheet">
-    <!--External CSS-->
-    <link rel="stylesheet" href="/assets/css/product.css" />
-    <link rel="stylesheet" href="/assets/css/main.css" />
-    <!--External Javascript-->
-    <script type="text/javascript" src="/app/js/function.js"></script>
-  </head>
   <!--Local fetching API-->
   <header>
     <div class="container text-center" id="men-container"></div>
@@ -105,7 +80,8 @@
             <p>₱2000</p>
             <p class="card-text pt-2"><small class="text-muted">Last updated 3 mins ago</small></p>
             <a href="/template/men.html"><button type="button"
-                class="btn rounded-pill btn-suede btn-warning float-end">Go to
+                class="btn rounded-pill btn-suede btn-warning float-end">Go
+                to
                 Shop</button></a>
           </div>
         </div>
@@ -123,7 +99,8 @@
             <p>₱4000</p>
             <p class="card-text pt-2"><small class="text-muted">Last updated 3 mins ago</small></p>
             <a href="/template/men.html"><button type="button"
-                class="btn btn-suede rounded-pill btn-warning float-end">Go to Shop</button></a>
+                class="btn btn-suede rounded-pill btn-warning float-end">Go
+                to Shop</button></a>
           </div>
         </div>
       </div>
@@ -140,7 +117,8 @@
             <p>₱2000</p>
             <p class="card-text pt-2"><small class="text-muted">Last updated 3 mins ago</small></p>
             <a href="/template/men.html"><button type="button"
-                class="btn rounded-pill btn-suede btn-warning float-end">Go to
+                class="btn rounded-pill btn-suede btn-warning float-end">Go
+                to
                 Shop</button></a>
           </div>
         </div>
